syntax = "proto3";

option csharp_namespace = "GrpcService1";

package info;


service Persons {
  

  rpc AddNewPerson (Person) returns (Result);
  rpc ListPersons (PersonId) returns (stream Person);
  rpc DeletePerson (PersonId) returns (Result);
  rpc EditPerson (Person) returns (Result);

}



message Person {
	int32 id=7;
	string fm=1;
	string im=2;
	string ot=3;
	
	string dtr=4;
	int32 sex=5;
	int32 HasChilds=6;
	
}
message PersonId {
	int32 id=1;

}
message Result {
	int32 res=1;

}


